fix sidebar bleed
fix sidebar bleed

fix sidebar bleed

fix sidebar bleed

--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -40,4 +40,8 @@
     .sidebar-footer-actions-keyboard-shortcuts .d-icon:hover {
     color: #b0bec5;
     }
+
+    .navigation-topics .container.list-container {
+        box-shadow: 0 8px 40px 0 rgba(103,151,255,.1),0 12px 40px 0 rgba(133,255,103,.1) !important;
+    }
   }
